[MED] 初步Spring Security无csrf权限下通过

--- a/src/main/webapp/WEB-INF/views/thymeleaf/index.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/index.html
@@ -5,10 +5,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>Spittr</title>
-        <link rel="stylesheet" type="text/css" th:href="@{/resources/style.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/resources/static/style.css}"/>
     </head>
     <body>
-    <a th:href="@{/logout}">Logout</a>
+
     <br/>
         <h1>Welcome to Spittr by thymeleaf</h1>
         <h3> index.html </h3>
