--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -4,16 +4,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf/thymeleaf-extras-springsecurity">
-    <head>
+    <head >
         <title>Login Page</title>
-        <link rel="stylesheet" type="text/css" th:href="@{/resources/style.css}"/>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" th:href="@{/resources/static/style.css}"/>
     </head>
-    <body onload="document.f.username.focus();">
-        <h1>Welcome to Spittr Login</h1>
+    <body>
         <h3> Login with Username and Password </h3>
 <div sec:authorize="isAuthenticated()">
     Hello <span sec:authentication="name">someone</span>
+
 </div>
+
+
+        <p th:text="${msg} "></p>
+
         <form method="post" action="/login" >
             <table>
                 <tr>
@@ -24,20 +29,29 @@
                     <td>Password:</td>
                     <td> <input name="password" type="password" /> </td>
                 </tr>
+
+                <tr>
+                    <td><input id="remember_me" name="remember-me" type="checkbox"/></td>
+                    <td><label for="remember_me" class="inline">Remember me</label></td>
+                </tr>
+                <input type="hidden"  name="${_csrf.parameterName}"   value="${_csrf.token}"/>
                 <tr>
                     <td colspan="2">
                         <input name="submit" type="submit" value="Login" />
+                        <input name="reset" type="reset" value="Reset" />
                     </td>
                 </tr>
+
             </table>
 
-            <input id="remember_me" name="remember-me" type="checkbox"/>
-            <label for="remember_me" class="inline">Remember me</label>
+            <span ></span>
+
+
 
         </form>
 
 
-        <a href="spittle/spittles">Spittles</a> |
-        <a href="spittle/register">Register</a>
+     <!--   <a href="spittle/spittles">Spittles</a> |
+        <a href="spittle/register">Register</a>-->
     </body>
 </html>
